crates/keron-lang/tests/corpus/errors/check/resource_kinds_remain_distinct.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `File`, found `Symlink`
  --> 4:15
  |
4 | val f: File = s
  |               ^
